--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Lucas-Phelipe.github.io/Dr.-Rim",
   "name": "sangueheroi",
   "version": "0.1.0",
   "private": true,
@@ -22,7 +23,6 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
     "sangueheroi": "file:",
-    "vite": "^6.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -31,7 +31,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": [
