--- a/github-page/.github/workflows/build.yml
+++ b/github-page/.github/workflows/build.yml
@@ -1,25 +1,41 @@
-name: deploy
+name: Deploy to GitHub Pages
 
 on:
   push:
     branches:
-      - developer
-
+      - developer  # Ou o nome do seu branch principal
 
 jobs:
   deploy:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest  # Versão mais recente
+    
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v4
+        
+      - uses: actions/setup-node@v4
         with:
-          node-version: '14.x'
-      - name: Build web-app
-        run: |
-          npm ci
-          npm run build
-      - name: Deploy to gh-pages
-        uses: peaceiris/actions-gh-pages@v3
+          node-version: '20.x'  # Versão LTS atual
+          cache: 'npm'
+          
+      - name: Install dependencies
+        run: npm ci
+        
+      - name: Build project
+        run: npm run build
+        
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+        
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
+          path: './build'  # Pasta de build do React
+          
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
