--- a/github-page/.github/workflows/build.yml
+++ b/github-page/.github/workflows/build.yml
@@ -2,40 +2,27 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches:
-      - developer  # Ou o nome do seu branch principal
+    branches: [ developer ]  # Altere para seu branch de trabalho
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest  # Versão mais recente
-    
+    runs-on: ubuntu-latest
     permissions:
-      contents: write
       pages: write
       id-token: write
-
+      
     steps:
       - uses: actions/checkout@v4
-        
+      
       - uses: actions/setup-node@v4
         with:
-          node-version: '20.x'  # Versão LTS atual
-          cache: 'npm'
+          node-version: '20.x'
           
-      - name: Install dependencies
-        run: npm ci
-        
-      - name: Build project
-        run: npm run build
-        
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-        
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: './build'  # Pasta de build do React
-          
-      - name: Deploy to GitHub Pages
-        id: deployment
+      - run: npm ci
+      - run: npm run build
+      
+      - name: Deploy
         uses: actions/deploy-pages@v4
+        with:
+          artifact_name: 'web-app'
+          publish_dir: './build'
