--- a/github-page/package.json
+++ b/github-page/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Lucas-Phelipe.github.io/",
+  "homepage": "https://Lucas-Phelipe.github.io/Dr.-Rim",
   "name": "sangueheroi",
   "version": "0.1.0",
   "private": true,
